<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:layout_editor_absoluteY="0dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/timeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tv_id"
            android:inputType="number" />

        <EditText
            android:id="@+id/et_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tv_firstname"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tv_lastname"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tv_phone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/et_edu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tv_edu"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_hobby"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tv_hobby"
            android:inputType="text" />
        <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_txt" />
        <Button
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_update_txt" />
        <Button
            android:id="@+id/btn_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_delete_txt" />
        <Button
            android:id="@+id/btn_get_single"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_get_single_txt" />
        <Button
            android:id="@+id/btn_get_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_get_all_txt" />

        <Button
            android:id="@+id/btn_log_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_log_out" />
        <TextView
            android:id="@+id/summaryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</ScrollView>